--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900;9..40,1000&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900;9..40,1000&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-    html {
-      font-family: "Inter", sans-serif;
-    }
+  html {
+    font-family: "Inter", sans-serif;
   }
+  body {
+    min-height: 100vh;
+    background: rgb(251, 194, 235);
+    background: linear-gradient(
+      0deg,
+      rgba(251, 194, 235, 1) 0%,
+      rgba(166, 193, 238, 1) 100%
+    );
+    background-repeat: no-repeat;
+  }
+}
